--- a/index.html
+++ b/index.html
@@ -169,13 +169,13 @@
         category: "🎬时装类",
         title: "韩系夏季女装短裤合集",
         url: "https://www.youtube.com/playlist?list=PL6OkvGimqGn3zGcE37IMMaq_Hwn7Ud61h",
-        thumbnailUrl: "https://i.ibb.co/F44kTqCx/hanxiduanku.jpg"// 替换为实际的图片URL
+        thumbnailUrl: "https://i.ibb.co/0RQSZHhF/hanxiduanku.jpg"// 替换为实际的图片URL
       },
       {
         category: "🎬 时装类",
         title: "韩系夏季女装超短裤",
         url: "https://www.youtube.com/playlist?list=PL6OkvGimqGn3XlSvUlPbTHdbYrisI0028",
-       thumbnailUrl: "https://i.ibb.co/JwVz5cTz/hanxichuaoduanku.jpg"// 替换为实际的图片URL
+       thumbnailUrl: "https://i.ibb.co/wZ7Fptqz/hanguochaoduanqun.jpg"// 替换为实际的图片URL
 
       },
       {
@@ -194,14 +194,14 @@
         category: "时装",
         title: "时装模特",
         url: "https://www.youtube.com/playlist?list=PL6OkvGimqGn1AHr5CkHoJoP7GINVO78p7",
-         thumbnailUrl: "https://i.ibb.co/YFrDRMfk/shizhaungmote.jpg"// 替换为实际的图片URL
+         thumbnailUrl: "https://i.ibb.co/xq1vKFxr/shizhaungmote.jpg"// 替换为实际的图片URL
       },
       // 新添加的播放列表数据
       {
         category: "🎬 时装类",
         title: "韩系夏季少女模特",
         url: "https://www.youtube.com/playlist?list=PL6OkvGimqGn2ohJhEnek_eQUKU-Ro70uS",
-         thumbnailUrl: "https://i.ibb.co/93v0VD2K/hanxishaonv.jpg"// 替换为实际的图片URL
+         thumbnailUrl: ""https://i.ibb.co/whvrjk4Y/hanxishaonv.jpg"// 替换为实际的图片URL
       },
       {
         category: "🎬 时装类",
