--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
         category: "🎬 时装类",
         title: "韩系夏季少女模特",
         url: "https://www.youtube.com/playlist?list=PL6OkvGimqGn2ohJhEnek_eQUKU-Ro70uS",
-         thumbnailUrl: ""https://i.ibb.co/whvrjk4Y/hanxishaonv.jpg"// 替换为实际的图片URL
+         thumbnailUrl: "https://i.ibb.co/whvrjk4Y/hanxishaonv.jpg"// 替换为实际的图片URL
       },
       {
         category: "🎬 时装类",
