--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
         category: "🎬 时装类",
         title: "韩系啦啦队服装",
         url: "https://www.youtube.com/playlist?list=PL6OkvGimqGn28pzTFGo6t0ND9W7hEkiwx",
-        thumbnailUrl: "https://i.ibb.co/HwSdQ2j/8hanxilaladui.jpg"// 替换为实际的图片URL
+        thumbnailUrl: "https://i.ibb.co/rKFDvV3X/hanxilaladui.jpg"// 替换为实际的图片URL
       },
       {
         category: "时装类",
@@ -255,7 +255,7 @@
         category: "时装类",
         title: "韩系夏季泳装",
         url: "https://www.youtube.com/playlist?list=PL6OkvGimqGn1UuBtYu9j9r8XBp4drwPaE",
-        thumbnailUrl: "https://i.ibb.co/C5bg4XKS/2.jpg"// 替换为实际的图片URL
+        thumbnailUrl: "https://i.ibb.co/pr5WBLyP/hanxiyongzhuang.jpg"// 替换为实际的图片URL
       },
       {
         category: "🎬 时装类",
@@ -303,19 +303,19 @@
         category: "🎬 时装类",
         title: "教你當正宗韓妞少女穿搭",
         url: "https://www.youtube.com/playlist?list=PL6OkvGimqGn3B3SkuEn9meyqYm5O4TVhd",
-        thumbnailUrl: "https://i.ibb.co/S8k5V73/zhengzhonghanniu.jpg" // 替换为实际的图片URL
+        thumbnailUrl: "https://i.ibb.co/35Tf5xgG/zhengzhong.jpg" // 替换为实际的图片URL
       },
       {
         category: "🎬 时装类",
         title: "閨蜜穿搭分享",
         url: "https://www.youtube.com/playlist?list=PL6OkvGimqGn1gbaZJY7v3pBAVGBbGD_tz",
-        thumbnailUrl: "https://i.ibb.co/5W6Bfr6S/guimichuanda.jpg" // 替换为实际的图片URL
+        thumbnailUrl: "https://i.ibb.co/qFrjNCfK/guimi.jpg" // 替换为实际的图片URL
       },
       {
         category: "🎬 时装类",
         title: "情侣穿搭",
         url: "https://www.youtube.com/playlist?list=PL6OkvGimqGn2_P-SW3Z5ZhEdukO2nmrZp",
-        thumbnailUrl: "https://i.ibb.co/pvXx6JV6/zhongguofeg.jpg" // 替换为实际的图片URL
+        thumbnailUrl: "https://i.ibb.co/DP0stdN9/qinglv.jpg" // 替换为实际的图片URL
       },
       {
         category: "🎬 时装类",
@@ -351,7 +351,7 @@
                 category: "🎬时装类",
                 title: "法式少女穿搭",
                 url: "https://www.youtube.com/playlist?list=PL6OkvGimqGn2vmQAochyry-_RQ8XR76Dn",
-                       thumbnailUrl: "https://i.ibb.co/C3y7mtX7/fashishaonvhunda.jpg" // 替换为实际的图片URL
+                       thumbnailUrl: "https://i.ibb.co/4nTYS0sy/fashishaonv.jpg" // 替换为实际的图片URL
 
 
             },
